feat: Add L1 validator state syncer and P-Chain overview page
Backend Changes:
- Add L1 validator state syncer with automatic subnet discovery
  * Discovers L1 subnets from ConvertSubnetToL1 transactions
  * Periodically syncs validator state (configurable interval)
  * Tracks validator balance, weight, uptime, and active status
- Fix critical bugs in validator data fetching:
  * Add sync.Once to prevent panic on multiple Stop() calls
  * Replace fmt.Sscanf with strconv.ParseUint for robust large number parsing
  * Add retry logic with exponential backoff to GetCurrentValidators RPC
- Update ClickHouse schema with l1_validator_state and l1_subnets tables
- Add validator sync configuration to config.example.yaml

Frontend Changes:
- Add P-Chain Overview page (/p-chain/overview):
  * Display key metrics: L1 subnets, active validators, total weight
  * Show L1 subnet creation timeline
  * Platform activity breakdown by transaction type (30d)
  * L1 subnets table with validator counts
- Add P-Chain navigation item to main menu
- Update routing to support P-Chain pages

Other:
- Add sync.log to .gitignore
- Fix incremental indexer memory issue
- Update dependencies

Closes: Validator state tracking for L1 subnets

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -13,4 +13,8 @@
   maxConcurrency: 100
   name: P-Chain
   vm: p
+  # Enable L1 validator state syncing (discovers L1 subnets from ConvertSubnetToL1 transactions)
+  enableValidatorSync: true
+  # How often to sync validator state in minutes (default: 5)
+  validatorSyncInterval: 5
 
