fix(evm): use configurable RPC batch sizes instead of hardcoded 1
  BatchSize and DebugBatchSize were hardcoded to 1, causing each RPC call
  (blocks, receipts, traces) to be sent as a separate HTTP request instead
  of being batched. This resulted in ~150x more HTTP requests than necessary
  and caused C-Chain sync to fall further behind over time.

  - Add rpcBatchSize and debugBatchSize config options for EVM chains
  - Default to 100 for RPC calls, 15 for trace calls
  - Update config.example.yaml with new options

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -5,6 +5,9 @@
   maxConcurrency: 256
   name: C-Chain
   vm: evm
+  # RPC batching settings (EVM only)
+  rpcBatchSize: 100    # RPC calls per HTTP request (default: 100)
+  debugBatchSize: 15   # Trace calls per HTTP request (default: 15)
 
 - chainID: 0
   rpcURL: http://127.0.0.1:9650
